# tool-registry

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  build-and-push.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/api/: health.py  registry.py  search.py  stats.py
app/core/: capability_store.py  migrations.py  registry_manager.py
app/embeddings/: base.py  factory.py  ollama.py  openai.py  sentence_transformers.py
app/registration/: base.py  http_push.py  rabbitmq_listener.py
app/reranker/: base.py  factory.py  llm_reranker.py  ollama.py  openai_compatible.py
tests/: conftest.py
tests/unit/: test_registry_helpers.py  test_reranker_base.py
