[project]
name = "tool-registry"
version = "0.1.0"
description = "Semantic capability index for microservices — register capabilities, search by intent"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pymilvus==2.5.18",
    "sentence-transformers>=3.0.0",
    "aio-pika==9.5.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]
